--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
+
 <body>
-  <div class="container-center">
+  <main>
     <div class="card">
       <div class="container-img">
         <img class="img" src="images/image-equilibrium.jpg" alt="NFT">
@@ -18,17 +20,17 @@
         </div>
       </div>
       <div class="p-25x">
-        <label class="title">Equilibrium #3429</label>
+        <h2 class="title">Equilibrium #3429</h2>
         <p class="description">Our Equilibrium collection promotes balance and calm.</p>
         <div class="values">
-            <div class="price">
-              <img class="mr-5" src="images/icon-ethereum.svg" alt="ethereum">
-              <label>0.041 ETH</label>
-            </div>
-            <div class="time">
-              <img class="mr-5" src="images/icon-clock.svg" alt="ethereum">
-              <label>3 days left</label>
-            </div>
+          <div class="price">
+            <img class="mr-5" src="images/icon-ethereum.svg" alt="ethereum">
+            <label>0.041 ETH</label>
+          </div>
+          <div class="time">
+            <img class="mr-5" src="images/icon-clock.svg" alt="ethereum">
+            <label>3 days left</label>
+          </div>
         </div>
         <hr>
         <div class="autor">
@@ -37,8 +39,8 @@
         </div>
       </div>
     </div>
+  </main>
 
-  </div>
 </body>
 
 </html>
